[gd_scene load_steps=9 format=3 uid="uid://da2bsgssficyc"]

[ext_resource type="Script" path="res://ui/load/load.gd" id="1_k1k36"]
[ext_resource type="Texture2D" uid="uid://ob1kv08o0ocy" path="res://assets/texture/element.aseprite" id="2_q47mt"]
[ext_resource type="PackedScene" uid="uid://cu60qrmkowara" path="res://ui/load/level_tree.tscn" id="3_aexx1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_f4v56"]
atlas = ExtResource("2_q47mt")
region = Rect2(240, 0, 16, 16)

[sub_resource type="Animation" id="Animation_rjeuq"]
resource_name = "ExpandBackButton"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Back:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1040, 32), Vector2(1008, 32)]
}

[sub_resource type="Animation" id="Animation_v52hj"]
resource_name = "ExpandStartButton"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Start:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1040, 575), Vector2(1008, 575)]
}

[sub_resource type="Animation" id="Animation_ftirj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Back:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1040, 32)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Start:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1040, 575)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bkota"]
_data = {
"ExpandBackButton": SubResource("Animation_rjeuq"),
"ExpandStartButton": SubResource("Animation_v52hj"),
"RESET": SubResource("Animation_ftirj")
}

[node name="Load" type="CanvasLayer"]
script = ExtResource("1_k1k36")

[node name="BG" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.152941, 0.160784, 0.176471, 1)
metadata/_edit_group_ = true

[node name="Logo" type="TextureRect" parent="BG"]
modulate = Color(1, 1, 1, 0.0235294)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_f4v56")

[node name="Back" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -112.0
offset_top = 32.0
offset_right = -32.0
offset_bottom = 73.0
grow_horizontal = 0
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.945098, 0.909804, 1)
theme_override_font_sizes/font_size = 40
text = "返回"
horizontal_alignment = 2

[node name="Button" type="Button" parent="Back"]
modulate = Color(0, 0, 0, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -32.0
offset_right = 188.0
grow_horizontal = 2
grow_vertical = 2

[node name="Start" type="Label" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -112.0
offset_top = -81.0
offset_right = -32.0
offset_bottom = -40.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.945098, 0.909804, 1)
theme_override_font_sizes/font_size = 40
text = "开始"
horizontal_alignment = 2

[node name="Button" type="Button" parent="Start"]
modulate = Color(0, 0, 0, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -32.0
offset_right = 188.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bkota")
}

[node name="LevelTree" parent="." instance=ExtResource("3_aexx1")]
offset_left = 464.0
offset_top = 100.0
offset_right = 464.0
offset_bottom = 100.0

[connection signal="button_down" from="Back/Button" to="." method="_on_back_button_button_down"]
[connection signal="mouse_entered" from="Back/Button" to="." method="_on_back_button_mouse_entered"]
[connection signal="mouse_exited" from="Back/Button" to="." method="_on_back_button_mouse_exited"]
[connection signal="button_down" from="Start/Button" to="." method="_on_start_button_button_down"]
[connection signal="mouse_entered" from="Start/Button" to="." method="_on_start_button_mouse_entered"]
[connection signal="mouse_exited" from="Start/Button" to="." method="_on_start_button_mouse_exited"]
